--- a/assets/bootstrap/css/bootstraplogin.css
+++ b/assets/bootstrap/css/bootstraplogin.css
@@ -88,13 +88,21 @@
 .container .info span .fa {
   color: #EF3B3A;
 }
+
+h1 {
+  font-family: "inherit";
+  font-size: 40px;
+  color: #333;
+  font: bold;
+}
+
 body {
   background: #76b852; /* fallback for old browsers */
   background: -webkit-linear-gradient(right, #76b852, #8DC26F);
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
   background: -o-linear-gradient(right, #76b852, #8DC26F);
   background: linear-gradient(to left, #76b852, #8DC26F);
-  font-family: "Roboto", sans-serif;
+  font-family: "inherit", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 }
