--- a/assets/bootstrap/css/bootstraplogin.css
+++ b/assets/bootstrap/css/bootstraplogin.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .login-page {
-  width: 360px;
+  width: 480px;
   padding: 8% 0 0;
   margin: auto;
 }
@@ -30,7 +30,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4A9025;
+  background: #da336b;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -41,7 +41,7 @@
   cursor: pointer;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #4A9025;
+  background: #da336b;
 }
 .form .message {
   margin: 15px 0 0;
@@ -49,7 +49,7 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4A9025;
+  color: #da336b;
   text-decoration: none;
 }
 .form .register-form {
@@ -90,18 +90,18 @@
 }
 
 h1 {
-  font-family: "inherit";
+  font-family: "arial";
   font-size: 40px;
-  color: #333;
+  color: #da336b;
   font: bold;
 }
 
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: #00b8ef; /* fallback for old browsers */
+  /*background: -webkit-linear-gradient(right, #00b8ef, #00000);
+  background: -moz-linear-gradient(right, #00b8ef, #00000);
+  background: -o-linear-gradient(right, #00b8ef, #00000);
+  background: linear-gradient(to left, #00b8ef, #00000);*/
   font-family: "inherit", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
